--- a/client/scss/components/component/_forms.scss
+++ b/client/scss/components/component/_forms.scss
@@ -228,6 +228,7 @@ input[type="search"]::-webkit-search-decoration {
     align-items: center;
     display: flex;
     min-height: $form-input-height;
+    padding-right:0;
 
     #file-upload {
         left: -9999px;
@@ -238,6 +239,8 @@ input[type="search"]::-webkit-search-decoration {
         cursor: pointer;
       	display: inline-block;
       	margin: 0;
+        border-top-right-radius: $form-border-radius;
+        border-bottom-right-radius: $form-border-radius;
     }
 
     #filename{
